# vates

./: .env.example  .gitignore  ENV_SETUP.md  MEMVERGE_INTEGRATION.md  QUICKSTART.md  README.md  pyproject.toml  test_env_setup.py  test_memverge_demo.py
frontend-storytelling-app/: README.md  package.json  pnpm-lock.yaml
frontend-storytelling-app/app/: globals.css  page.tsx
frontend-storytelling-app/components/: circular-gallery.tsx  comic-sidebar.tsx  directory-upload.tsx  main-image-display.tsx  narration-panel.tsx  voice-agent-panel.tsx
frontend-storytelling-app/types/: story.ts
src/narrative_architect/: __init__.py  config.py  main.py  models.py
src/narrative_architect/agents/: __init__.py  base.py  creative_enhancement.py  image_captioning.py  narrative_synthesis.py
src/narrative_architect/services/: __init__.py  file_ingestion.py  memory_service.py  pipeline.py  storage.py
tests/: test_memory_integration.py  test_pipeline.py
